# wordle

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
wordle/: __init__.py  __main__.py  exceptions.py  solver.py  ui.py  wordlist.csv  wordlist.py
wordle/tests/: __init__.py  test_cli.py  test_tests.py  test_wordlist.py
